--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "@material-ui/core": "^4.11.2",
+    "dotenv": "^8.2.0",
+    "faunadb": "^4.0.0",
     "gatsby": "^2.26.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
